modules/security_group/main.tf
resource "aws_security_group" "ec2_sg" {
    vpc_id = var.vpc_id
  
    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  
    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]  # ✅ Allow outbound traffic
    }
  }
  
  resource "aws_security_group" "rds_sg" {
    vpc_id = var.vpc_id
  
    ingress {
      from_port       = 3306
      to_port         = 3306
      protocol        = "tcp"
      security_groups = [aws_security_group.ec2_sg.id]
    }
  }
